--- a/package.json
+++ b/package.json
@@ -13,18 +13,16 @@
         "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
     },
     "dependencies": {
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "lucide-react": "^0.475.0",
+        "lucide-react": "0.475.0",
         "next": "15.1.7",
         "next-themes": "^0.4.4",
         "react": "19.0.0",
         "react-dom": "19.0.0",
-        "tailwind-merge": "^3.0.2",
-        "tailwindcss": "^4.0.8"
+        "tailwind-merge": "^3.0.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@faker-js/faker": "^9.5.0",
         "@next/bundle-analyzer": "15.1.7",
         "@next/eslint-plugin-next": "15.1.7",
         "@tailwindcss/postcss": "^4.0.8",
@@ -38,11 +36,12 @@
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-promise": "^7.2.1",
         "eslint-plugin-react": "^7.37.4",
-        "eslint-plugin-tailwindcss": "^3.18.0",
         "globals": "^16.0.0",
         "postcss": "^8.5.3",
         "prettier": "^3.5.2",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "tailwindcss": "^4.0.8",
+        "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.1"
     }
