--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@tailwindcss/postcss": "^4.0.9",
+        "@types/js-cookie": "^3.0.6",
         "@vercel/analytics": "^1.5.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -54,6 +55,7 @@
         "embla-carousel-react": "8.5.2",
         "geist": "^1.3.1",
         "input-otp": "^1.4.2",
+        "js-cookie": "^3.0.5",
         "lucide-react": "0.477.0",
         "next": "15.2.0",
         "next-themes": "^0.4.4",
