--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@sentry/nextjs": "^9.5.0",
         "@tailwindcss/postcss": "^4.0.9",
         "@types/js-cookie": "^3.0.6",
         "@vercel/analytics": "^1.5.0",
