--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "date-fns": "^4.1.0",
         "embla-carousel-autoplay": "8.5.2",
         "embla-carousel-react": "8.5.2",
+        "framer-motion": "^12.5.0",
         "geist": "^1.3.1",
         "input-otp": "^1.4.2",
         "js-cookie": "^3.0.5",
@@ -61,10 +62,12 @@
         "next": "15.2.0",
         "next-themes": "^0.4.4",
         "react": "19.0.0",
+        "react-confetti": "^6.4.0",
         "react-day-picker": "^9.5.1",
         "react-dom": "19.0.0",
         "react-hook-form": "^7.54.2",
         "react-resizable-panels": "^2.1.7",
+        "react-use": "^17.6.0",
         "recharts": "2.15.1",
         "rimraf": "^6.0.1",
         "shadcn": "2.3.0",
