--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
         "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
     },
     "dependencies": {
-        "lucide-react": "0.485.0",
-        "next": "15.2.4",
+        "lucide-react": "^0.487.0",
+        "next": "^15.2.4",
         "next-themes": "^0.4.6",
-        "react": "19.1.0",
-        "react-dom": "19.1.0",
-        "tailwind-merge": "^3.0.2"
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "tailwind-merge": "^3.1.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.23.0",
         "@faker-js/faker": "^9.6.0",
-        "@next/bundle-analyzer": "15.2.4",
-        "@next/eslint-plugin-next": "15.2.4",
-        "@tailwindcss/postcss": "^4.0.17",
+        "@next/bundle-analyzer": "^15.2.4",
+        "@next/eslint-plugin-next": "^15.2.4",
+        "@tailwindcss/postcss": "^4.1.2",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-        "@types/node": "^22.13.14",
-        "@types/react": "19.0.12",
-        "@types/react-dom": "19.0.4",
+        "@types/node": "^22.14.0",
+        "@types/react": "^19.1.0",
+        "@types/react-dom": "^19.1.1",
         "eslint": "^9.23.0",
-        "eslint-config-next": "15.2.4",
+        "eslint-config-next": "^15.2.4",
         "eslint-config-prettier": "^10.1.1",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-promise": "^7.2.1",
-        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react": "^7.37.5",
         "globals": "^16.0.0",
         "postcss": "^8.5.3",
         "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "tailwindcss": "^4.0.17",
+        "tailwindcss": "^4.1.2",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.8.2",
-        "typescript-eslint": "^8.28.0"
+        "typescript-eslint": "^8.29.0"
     }
 }
